# amplifier-app-server

./: .gitignore  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  README.md  pyproject.toml
bundles/: cortex-core.md
config/: attention-rules.md
src/amplifier_server/: __init__.py  cli_admin.py  config.py  device_manager.py  llm_scorer.py  main.py  models.py  notification_processor.py  notification_store.py  server.py  session_manager.py
src/amplifier_server/api/: __init__.py  admin.py  auth.py  chat.py  devices.py  notifications.py  sessions.py  websocket.py
src/amplifier_server/auth/: __init__.py  middleware.py  models.py  security.py  user_store.py
src/amplifier_server/hooks/: __init__.py  base.py
static/: admin.html  components.css  design-tokens.css  index.html  login.html  register.html
static/components/: header.js
static/js/: api.js  auth.js  forms.js  modal.js  table.js  ui.js
